# sign-to-text

./: .gitignore  dataset_creation.py  hand_landmarks.csv  model.py  pyproject.toml  test.py
